RavenDB-21766 Fix z-index for test container info text

--- a/src/Raven.Studio/wwwroot/Content/css/styles-common.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles-common.less
@@ -2179,6 +2179,10 @@ ul.properties {
     }
 }
 
+.z-1 {
+    z-index: 1;
+}
+
 @import "prism.less";
 @import "ace.less";
 @import "leaflet.less";
